hotfix: fix profile edit button cross-browser alignment

--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,4 +1,5 @@
 .profile__edit {
+  display: inline-flex;
   width: 24px;
   height: 24px;
   position: relative;
